--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
-
 {% block body %}
+<h1>Tout mes post</h1>
+
 {% for post in posts %}
-<h2>{{post.title}}</h2>
-<p>{{post.content}}</p()>
-    
+  <h2>{{ post.title }}</h2>
+  <p>{{ post.content }}</p>
+
+
+    <form method="post" action="{{ path('post_remove', {'id': post.id}) }}">
+      <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
+      <button type="submit">Supprimer</button>
+      </form>
 {% endfor %}
+
 {% endblock %}
