--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
           <a class="nav-link active" aria-current="page" href="{{path('home')}}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{path('about')}}">about</a>
+          <a class="nav-link" href="{{path('post_create')}}">post</a>
         </li>
       </ul>
     </div>
