Ajout du CRUD pour les posts et templates associés

--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -1,9 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>Créér un post</h1>
+{# <h1>Créér un post</h1>
 
-{{ form(form) }}
+{{ form(form) }} #}
+
+<h1>{{ post is defined ? 'Modifier le post' : 'Créer un post' }}</h1>
+
+{{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button type="submit">Enregistrer</button>
+{{ form_end(form) }}
 
 
 {% endblock %}
